ssl/secure-caller-bundle/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: secure-caller-bundle
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: secure-caller-bundle
  template:
    metadata:
      labels:
        app.kubernetes.io/name: secure-caller-bundle
    spec:
#      initContainers:
#        - name: pem-to-truststore
#          image: registry.access.redhat.com/ubi8/openjdk-17:latest
#          env:
#            - name: ca_bundle
#              value: /opt/client-cert/service-ca.crt
#            - name: truststore_jks
#              value: /opt/truststore/truststore.jks
#            - name: password
#              value: changeit
#          command: ['/bin/bash']
#          args: ['-c', "csplit -z -f crt- $ca_bundle '/-----BEGIN CERTIFICATE-----/' '{*}' && for file in crt-*; do keytool -import -noprompt -keystore $truststore_jks -file $file -storepass changeit -alias service-$file; done"]
#          volumeMounts:
#            - mountPath: /opt/client-cert
#              name: client-cert
#            - mountPath: /opt/truststore
#              name: truststore
      containers:
        - image: piomin/secure-caller-bundle
          name: secure-caller-bundle
          ports:
            - containerPort: 8443
              name: https
          volumeMounts:
            - mountPath: /opt/secret
              name: cert
            - mountPath: /opt/client-cert
              name: client-cert
#            - mountPath: /opt/truststore
#              name: truststore
      volumes:
        - name: cert
          secret:
            secretName: secure-caller-bundle
        - name: client-cert
          configMap:
            name: secure-caller-bundle
#        - name: truststore
#          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: secure-caller-bundle
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: secure-caller-bundle
  name: secure-caller-bundle
spec:
  ports:
    - name: https
      port: 8443
      targetPort: 8443
  selector:
    app.kubernetes.io/name: secure-caller-bundle
  type: ClusterIP
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: secure-caller-bundle
  labels:
    app: secure-caller-bundle
    app.kubernetes.io/component: secure-caller-bundle
    app.kubernetes.io/instance: secure-caller-bundle
  annotations:
    openshift.io/host.generated: 'true'
spec:
  tls:
    termination: passthrough
  to:
    kind: Service
    name: secure-caller-bundle
    weight: 100
  port:
    targetPort: https
  wildcardPolicy: None
